@@ -3,3 +3,4 @@
 build/
 dist/
 ast_decompiler.egg-info/
+.tox/
